overflow-x: hidden added to the body toag in order to fix the excess scrolling space to the right of the body

--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,7 @@
 /* white: #FFFFFF; */
 
 body {
+	overflow-x: hidden;
     color: #FFFFFF;
     background-color: #1A1A1A;
     box-sizing: border-box;
